--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -28,7 +28,7 @@
 
 <script>
 	function moverScroll(id) {
-		const yOffset = -175;
+		const yOffset = -200;
 		const element = document.getElementById(id);
 		const y = element.getBoundingClientRect().top + window.pageYOffset + yOffset;
 
@@ -72,9 +72,9 @@
 				</div>
 				
 				<div class="juego-titulo">
-					<h1 style="font-size: 20px;">@juego.Nombre</h1>
+					<h1 style="font-size: 20px; margin: 0px;">@juego.Nombre</h1>
 
-					<div style="margin-top: 10px; display: flex; align-items: center; gap: 15px;">
+					<div style="display: flex; align-items: center; gap: 15px;">
 						@{
 							bool mostrarDRMs = false;
 
@@ -145,12 +145,12 @@
 					</div>
 				</div>
 
-				<div style="text-align: right; min-width: 350px; margin: 10px 20px;">
+				<div style="text-align: right; padding: 10px 20px; display: flex; flex-direction: column; gap: 15px;">
 					@if (juego.Analisis != null)
 					{
 						@if (string.IsNullOrEmpty(juego.Analisis.Cantidad) == false && string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false)
 						{
-							<div style="font-size: 14px; margin-bottom: 10px; flex: 0 0 auto;">
+							<div style="font-size: 14px; flex: 0 0 auto;">
 								<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-reviews')">
 									<div style="display: flex; align-items: center; justify-content: right;">
 										@if (int.Parse(juego.Analisis.Porcentaje) > 74)
@@ -890,15 +890,16 @@
 					<div class="juego-galeria-contenedor" style="margin-top: 50px;">
 						@if (mediaMostrarPosicion == 99999)
 						{
-							<BlazoredVideo style="width: 100%; height: 100%;" controls="controls" preload="metadata">
+							<BlazoredVideo style="width: 100vw; height: calc(100vh - 190px); cursor: pointer; max-width: 1320px; max-height: 742.50px;" controls="controls" preload="metadata">
 								<source src="@mediaMostrar" type="video/mp4" />
+								<source src="@mediaMostrar.Replace(".mp4", ".webm")" type="video/webm" />
 							</BlazoredVideo>
 						}
 						else
 						{
 							<div>
 								<div class="juego-galeria-numero">@(mediaMostrarPosicion + 1) / @(juego.Media.Capturas.Count)</div>
-								<img src="@mediaMostrar" style="width: 100%;" alt="@juego.Nombre">
+								<img src="@mediaMostrar" style="width: 100vw; height: calc(100vh - 190px); max-width: 1320px; max-height: 742.50px; object-fit: contain;" alt="@juego.Nombre">
 							</div>
 
 							<a class="juego-galeria-atras" @onclick="@(e => CambiarMediaMostrar(e, mediaMostrarPosicion - 1))">&#10094;</a>
