--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -272,7 +272,7 @@
 
 .juego-flexible-izquierda {
     min-width: 200px;
-    max-width: 270px;
+    max-width: 250px;
 }
 
 @media(max-width: 800px) {
@@ -295,13 +295,17 @@
 
 .juego-titulo {
     font-size: 20px;
-    margin: 12px 20px;
+    padding: 12px 20px;
     width: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 @media(max-width: 800px) {
     .juego-titulo {
-        margin: 5px;
+        padding: 5px;
     }
 }
 
