--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -643,7 +643,7 @@ else
 		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); max-width: 800px; padding: 30px; margin: 20px auto; overflow-y: scroll;">
 			<div style="display: flex; align-items: center;">
 				<button class="boton-pequeño" @onclick="OcultarFiltrado" style="width: auto; padding: 5px 15px; margin-right: 20px; border: 0px; color: var(--colorTextoVisitado); font-size: 22px;">
-					<i class="fa-solid fa-caret-left"></i>
+					<i class="fa-solid fa-arrow-left"></i>
 				</button>
 
 				<div style="font-size: 20px;">
