--- a/pepeizqs deals web/Pages/Privacy.cshtml
+++ b/pepeizqs deals web/Pages/Privacy.cshtml
@@ -1,48 +1,50 @@
 ﻿@page
 @model PrivacyModel
 @{
-	ViewData["Title"] = @Herramientas.Idiomas.CogerCadena(Model.idioma, "Privacy.Title");
+	ViewData["Title"] = @Herramientas.Idiomas.CogerCadena(Model.idioma, "Title", "Privacy");
 }
 
-<div style="font-size: 23px; text-align: left; margin-bottom: 30px;">
-	@Herramientas.Idiomas.CogerCadena(Model.idioma, "Privacy.Title")
-</div>
+<h1 style="font-size: 22px; text-align: left; margin: 0px;">
+	@Herramientas.Idiomas.CogerCadena(Model.idioma, "Title", "Privacy")
+</h1>
 
-<div class="perfil" style="margin-bottom: 40px;">
-	<div style="font-size: 20px;">
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Privacy.String1")
+<hr />
+
+<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; margin-bottom: 40px;">
+	<div style="font-size: 18px;">
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "String1", "Privacy")
 	</div>
 
 	<hr />
 
 	<div>
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Privacy.String2")
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "String2", "Privacy")
 
 		<ul>
 			<li>
-				@Herramientas.Idiomas.CogerCadena(Model.idioma, "Privacy.String3")
+				@Herramientas.Idiomas.CogerCadena(Model.idioma, "String3", "Privacy")
 			</li>
 			<li>
-				@Herramientas.Idiomas.CogerCadena(Model.idioma, "Privacy.String4")
+				@Herramientas.Idiomas.CogerCadena(Model.idioma, "String4", "Privacy")
 			</li>
 		</ul>
 
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Privacy.String5")
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "String5", "Privacy")
 	</div>
 </div>
 
-<div class="perfil">
-	<div style="font-size: 20px;">
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Privacy.String6")
+<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
+	<div style="font-size: 18px;">
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "String6", "Privacy")
 	</div>
 
 	<hr/>
 
 	<div style="margin-bottom: 20px;">
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Privacy.String7")
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "String7", "Privacy")
 	</div>
 
 	<div>
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Privacy.String8")
+		@Herramientas.Idiomas.CogerCadena(Model.idioma, "String8", "Privacy")
 	</div>
 </div>
